--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,14 @@ body{
 #MainTile{
     color: #87A658;
     display: block;
-    text-align: right;
+    float: right;
     padding-right: 5%;
+}
+
+#Logo{
+    height: 10%;
+    object-fit: contain;
+    display: inline;
 }
 
 div.MainTitle{
@@ -32,7 +38,10 @@ ul.Navigation{
     display: inline;
     float: left;
     display: block;
-    padding: 2%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom:10px;
+    padding-top: 10px;
     background-color: #595959;
 }
 #Navitem:hover{
