--- a/styles.css
+++ b/styles.css
@@ -18,25 +18,36 @@ table.MainTitle{
     background-color: #F2F2F2;
 }
 
+#Logodiv{
+    max-height: 10%;
+}
+
 #Logo{
-    width: 100%;
+    max-width: 50%;
+    min-width: 200px;
 }
+@media only screen and (min-width: 870px){
+    ul.Navigation{
+        list-style-type: none;
+        overflow: hidden;
+        margin: 0;
+        padding: 2%;
+        align-self: left;
+    }
 
-ul.Navigation{
-    list-style-type: none;
-    overflow: hidden;
-    margin: 0;
-    padding: 2%;
-    align-self: left;
-}
-
-#Navitem{
-    display: inline;
-    float: right;
-    display: block;
-    padding-left:5%;
-    padding-right: auto;
-    padding-bottom:10px;
-    background-color: #F2F2F2;
-    font-size: larger;
+    #Navitem{
+        display: inline;
+        float: right;
+        display: block;
+        padding-left:5%;
+        padding-right: auto;
+        padding-bottom:10px;
+        background-color: #F2F2F2;
+        font-size: larger;
+        font-weight: bolder;
+    }
+    #Navitem:hover{
+        text-decoration: underline;
+        color: #87A658;
+    }
 }
