table layout inserted

--- a/styles.css
+++ b/styles.css
@@ -1,53 +1,53 @@
 body{
-    background-color: aquamarine;
+    background-color: #CCD9B8;
     font-family: 'Montserrat', sans-serif;
 }
 
 #MainTile{
     color: #87A658;
-    display: block;
+    position: relative;
+    height: 100px;
+    width: 100px;
     float: right;
     padding-right: 5%;
 }
 
-#Logo{
-    height: 10%;
-    object-fit: contain;
-    display: inline;
-}
-
-div.MainTitle{
-    padding-top: 0.1pt;
-    padding-bottom: 0.1pt;
-    position: relative;
+table.MainTitle{
+    table-layout: auto;
+    width: 100%;
     background-color: #F2F2F2;
 }
 
-div.Navigation{
-    color: #F2F2F2;
+#Logodiv{
+    max-height: 10%;
 }
 
-ul.Navigation{
-    list-style-type: none;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
+#Logo{
+    max-width: 50%;
+    min-width: 200px;
 }
+@media only screen and (min-width: 870px){
+    ul.Navigation{
+        list-style-type: none;
+        overflow: hidden;
+        margin: 0;
+        padding: 2%;
+        align-self: left;
+    }
 
-#Navitem{
-    display: inline;
-    float: left;
-    display: block;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-bottom:10px;
-    padding-top: 10px;
-    background-color: #595959;
-}
-#Navitem:hover{
-    background-color: #9b9696;
-}
-
-header{
-    background-color: #595959;
+    #Navitem{
+        display: inline;
+        float: right;
+        display: block;
+        padding-left:5%;
+        padding-right: auto;
+        padding-bottom:10px;
+        background-color: #F2F2F2;
+        font-size: larger;
+        font-weight: bolder;
+    }
+    #Navitem:hover{
+        text-decoration: underline;
+        color: #87A658;
+    }
 }
