--- a/styles.css
+++ b/styles.css
@@ -64,11 +64,10 @@ table.MainTitle{
      /* Style the navigation menu */
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: #E8E8E8;
     position: relative;
   }
   
-  /* Hide the links inside the navigation menu (except for logo/home) */
   .topnav #myLinks {
     display: none;
   }
@@ -90,12 +89,7 @@ table.MainTitle{
     right: 0;
     top: 0;
   }
-  
-  /* Add a grey background color on mouse-over */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
+
   
   /* Style the active link (or home/logo) */
   .active {
