--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,24 @@ table.MainTitle{
     max-width: 50%;
     min-width: 200px;
 }
+div.content{
+    background-color: #F2F2F2;
+    margin-top: 10px;
+    padding: 2%;
+}
+
+div.beitrag{
+    background-color: #CCD9B8;
+    box-shadow: 2px 2px 5px #B5B5B5;
+    padding: 5px;
+    width: f;
+    margin: 5px;
+}
+table.ContentTable{
+    width: 100%;
+}
+
+
 @media only screen and (min-width: 870px){
     ul.Navigation{
         list-style-type: none;
