--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,24 @@ div.beitrag{
 table.ContentTable{
     width: 100%;
 }
+#Beitrag{
+    width: 40%;
+    display: inline-block;
+}
+#Beitragstitel{
+    display: inline;
+    
+}
+div.Beitragsbild{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+div.Beitragstext{
+    margin: 1%;
+    vertical-align: top;
+}
+
 
 
 @media only screen and (min-width: 870px){
