--- a/styles.css
+++ b/styles.css
@@ -36,9 +36,12 @@ div.Beitrag{
     background-color: #CCD9B8;
     box-shadow: 2px 2px 5px #B5B5B5;
     padding: 5px;
-    width: f;
     margin: 20px;
 }
+div.Beitrag:hover{
+    background-color: #d2d8c8;
+}
+
 table.ContentTable{
     width: 100%;
 }
@@ -62,11 +65,68 @@ div.Beitragstext{
     text-align: center;
     font-size: vw;
 }
-a.divbutton{
+button.divbutton{
     text-decoration: none;
     color: black;
+    background: transparent;
+    outline: none !important;
+    border: none !important;
+    margin: 0;
+    padding: 0;
 }
 
+
+.popup1{
+    position:fixed;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%) scale(0);
+    transition: 200ms ease-in-out;
+    border: 1px solid black;
+    background-color: #F2F2F2;
+    z-index: 15;
+    width: 80%;
+}
+.popup1.active{
+    transform: translate(-50%,-50%) scale(1);
+}
+.popupHeader{
+    padding: 10px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid black;
+}
+.popupHeader .title{
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+.popupHeader .closebutton{
+    cursor: pointer;
+    border:none;
+    outline: none;
+    background: none;
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+.popupBody{
+    padding: 10px 15px;
+}
+#overlay{
+    position: fixed;
+    top:0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    pointer-events: none;
+    opacity: 0;
+    transition: 200ms ease-in-out;
+}
+#overlay.active{
+    opacity: 1;
+    pointer-events: all;
+}
 
 @media only screen and (max-device-width: 480px) {
     div.Navigation{
