--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,27 @@
 .Kontaktdaten{
     text-align: center;;
 }
+.Content{
+    display: block;
+}
+
+.QA{
+    width: 100%;
+    background-color: white;
+    padding: 10px;
+}
+.Frage{
+    border-bottom: 1px solid black;
+    font-size: 1.2em;
+    background-color: #CCD9B8;
+    padding: 0.5%;
+}
+
+@media only screen and (max-device-width: 480px) {
+   #KontaktTitel{
+       font-size: 4em;
+   }
+   p{
+       font-size: 2em;
+   }
+}
