--- a/qualifikationen.css
+++ b/qualifikationen.css
@@ -1,6 +1,5 @@
 
 *{
-    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
@@ -48,7 +47,7 @@ html{
     height: 15px;
     width: 15px;
     background: #CCD9B8;
-    top: 28px;
+    top: 18px;
     z-index: -1;
     transform: rotate(45deg);
 }
@@ -61,9 +60,10 @@ html{
 .row section .icon,
 .center-line .scroll-icon{
     position: absolute;
-    background: #f2f2f2;
-    height: 40px;
-    width: 40px;
+    background: #CCD9B8;
+    margin-left: 10px;
+    height: 20px;
+    width: 20px;
     text-align: center;
     line-height: 40px;
     border-radius: 50%;
@@ -75,11 +75,11 @@ html{
     bottom: 0px;
     left: 50%;
     font-size: 25px;
-    transform: translateX(-50%);
+    transform: translateX(-100%);
 }
 .row-1 section .icon{
     top: 15px;
-    right: -60px;
+    right: -50px;
 }
 .row-2 section .icon{
     top: 15px;
